--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,12 +3,56 @@ body {
 	background-color: #efeee7;
 	margin: 155px;
 	font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
-	
+	line-height: 150%
+
 }
 
 h1 {
-	color: #efeee7;
-	background-color: #4aaaa5;
+	color: #4aaaa5;
+	background-color: white;
 	padding: 20px;
-
+	font-family: 'Georgia', Times, Times New Roman, serif;
 }
+
+h2, h3 {color: #4aaaa5;
+	font-family: 'Georgia', Times, Times New Roman, serif;
+}
+
+a {
+	color: gray;
+	float: right;
+	font-size: 18px;
+}
+
+img {
+	float: left;
+}
+
+.container {
+	width: 650px;
+	margin: 20px;
+	background-color: white;
+	padding: 20px;
+	float: left;
+}
+
+#connect {
+	background-color: white;
+	width: 350px;
+	padding: 20px;
+	float: left;
+}
+
+
+footer {
+	clear: both;
+	padding: 20px;
+	text-align: center;
+	background-color: #666666;
+	color: white;
+	font-size: 12px;
+}
+
+
+
+
